<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<include layout="@layout/title_layout"/>
    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110px">
        <TextView

            android:textSize="30px"
            android:textColor="@color/black"
            android:layout_marginLeft="23px"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:text="原密码"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_marginLeft="286px"
            android:id="@+id/original_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/please_input_original_password"
            android:textColor="@color/gray_da"
            android:textColorHint="@color/gray_da"
            android:textCursorDrawable="@drawable/my_cursor"
            android:textSize="30px" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_c" />
    </com.zhy.autolayout.AutoRelativeLayout>
    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110px">
        <TextView

            android:textSize="30px"
            android:textColor="@color/black"
            android:layout_marginLeft="23px"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:text="新密码"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_marginLeft="286px"
            android:id="@+id/new_password_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/please_input_new_password"
            android:textColor="@color/gray_da"
            android:textColorHint="@color/gray_da"
            android:textCursorDrawable="@drawable/my_cursor"
            android:textSize="30px" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_c" />
    </com.zhy.autolayout.AutoRelativeLayout>
    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110px">
        <TextView

            android:textSize="30px"
            android:textColor="@color/black"
            android:layout_marginLeft="23px"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:text="新密码"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_marginLeft="286px"
            android:id="@+id/new_password_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/please_confirm_new_password"
            android:textColor="@color/gray_da"
            android:textColorHint="@color/gray_da"
            android:textCursorDrawable="@drawable/my_cursor"
            android:textSize="30px" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_c" />
    </com.zhy.autolayout.AutoRelativeLayout>
    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="560px"
        android:layout_height="110px"
        android:layout_marginTop="170px"
        android:textColor="@color/white"
        android:text="@string/confirm"
        android:textSize="32px"
        android:gravity="center"
        android:background="@drawable/gradient_bg"

        />
</com.zhy.autolayout.AutoLinearLayout>