<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="750px"
        android:layout_height="334px"
        android:background="@mipmap/login_bg" />

    <com.makeramen.roundedimageview.RoundedImageView
        app:layout_auto_basewidth="height"
        android:id="@+id/head_image"
        android:layout_width="212px"
        android:layout_height="212px"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="243px"
        android:background="@mipmap/user_default_icon"
        app:riv_oval="true" />

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/account_number_layout"
        android:layout_width="586px"
        android:layout_height="79px"
        android:layout_below="@+id/head_image"
        android:layout_marginLeft="96px"
        android:layout_marginTop="110px">

        <ImageView
            android:id="@+id/icon_account"
            android:layout_width="40px"
            android:layout_height="44px"
            android:background="@mipmap/account_number_bg" />

        <EditText

            android:layout_marginBottom="12px"
            android:id="@+id/account_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="45px"
            android:layout_toRightOf="@+id/icon_account"
            android:background="@color/transparent"
            android:gravity="center"
            android:hint="@string/please_input_account_number"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@color/black_23"
            android:textColorHint="@color/gray_b"
            android:textCursorDrawable="@drawable/my_cursor"
            android:textSize="30px" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/divider_color" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/password_layout"
        android:layout_width="586px"
        android:layout_height="79px"
        android:layout_below="@+id/account_number_layout"
        android:layout_marginLeft="96px"
        android:layout_marginTop="59px">

        <ImageView
            android:id="@+id/icon_password"
            android:layout_width="40px"
            android:layout_height="45px"
            android:background="@mipmap/password_bg" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="45px"
            android:textCursorDrawable="@drawable/my_cursor"
            android:inputType="textPassword"

            android:layout_toRightOf="@+id/icon_password"
            android:background="@color/transparent"
            android:gravity="center"
            android:hint="@string/please_input_password"
            android:textColor="@color/black_23"
            android:textColorHint="@color/gray_b"
            android:textSize="30px" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/divider_color" />
    </com.zhy.autolayout.AutoRelativeLayout>
    <ImageView
        android:id="@+id/login"
        android:layout_marginTop="148px"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password_layout"
        android:background="@mipmap/login_icon"
        android:layout_width="568px"
        android:layout_height="120px" />
    <TextView
        android:drawableLeft="@mipmap/login_agree_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31px"
        android:layout_below="@+id/login"
        android:textColor="@color/black_23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_agree"/>
</com.zhy.autolayout.AutoRelativeLayout>